Always add data sources in SystemMonitorEngine::sourceRequestEvent()

Summary:
Otherwise if we show the plasma-nm applet twice, m_sensors won't be empty
and we won't be able to fect the connection speed data.

git blame points to
https://github.com/KDE/kde-workspace/commit/ba7444f99ab08cf0a305899bf66879314bd0d5a9
and
https://github.com/KDE/kde-workspace/commit/235fea1868b560acf32c5c13a3d16ef233b50be6

but they don't really explain why setData() was called only if m_sensors
was empty.

BUG: 380209

Test Plan:
- plasmoidviewer -a org.kde.plasma.networkmanagement
- open the networkmanager applet twice
- make sure the connection's speed graph works the 2nd time.

Reviewers: #plasma, jgrulich

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D5973